resources/css/index.less
.core-main-layout > div:nth-child(1) {
    min-width: 0;
    position: relative;
}

.core-main-view {
    height: 100%;
}

.core-side-panel {
    height: 100%;
    flex: 0 0 300px;
    > * {
        margin-bottom: 20px;
    }
}

.nav-menu-wrap {
    display: flex;
    flex-direction: row;
    align-items: center;
    color: white;
    font-size: large;
}

.logo-wrap {
    margin-left: auto;
    button {
        display: inline-block;
        margin-right: 5px;
    }
    div {
        display: inline-block;
    }
}

.chart-outer {
    height: 50%;
    width: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    .chart-top {
        display: flex;
        justify-content: space-between;
        margin: 0px 24px;
        > * {
            margin: 10px 0;
            display: inherit;
        }
        .progress {
            display: inline;
            width: 200px;
            background-color: #a94442;
            .progress-bar {
                float: right;
                transition: none;
                background-color: #28a328;
            }
        }
        .progress.full .progress-bar {
            background-color: #a94442;
        }
    }
    .chart-container {
        position: relative;
        height: ~'calc(100% - 80px)';
    }
    .chart-bottom {
        display: flex;
        > * {
            margin-right: 10px;
        }
        .chart-stats {
            margin-left: 20px;
            flex-grow: 1;
            display: flex;
            justify-content: center;
            background: white;
            span {
                margin: auto 10px;
                white-space: pre;
            }
        }
        .btn-group {
            align-self: flex-end;
            white-space: pre;
        }
    }
}

.rangeslider {
    margin-bottom: 40px;
    .rangeslider__handle {
        width: 10px;
        border-radius: 5px;
        transform: translate(-50%, -50%);
        &:after {
            display: none;
        }
    }
    .rangeslider__labels .rangeslider__label-item {
        transform: translate(-50%, 0);
    }
}

.core-side-panel {
    .glyphicon {
        margin-right: 5px;
    }
}
.core-side-panel.disabled {
    pointer-events: none;
}

.btn-lg {
    .glyphicon {
        top: 2px;
    }
}

.input-group-addon {
    min-width: 60px;
}

.btnFullViewToggle {
    position: absolute;
    top: 8px;
    right: 8px;
}

